Send messages to queue after creating new order

--- a/OrdersNotifications/OrdersNotifications.Api/appsettings.json
+++ b/OrdersNotifications/OrdersNotifications.Api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureStorageConnectionString": "UseDevelopmentStorage=true",
+  "EmailSettings": {
+    "AdminEmail": "guilherme.porto@lambda3.com.br"
+  }
 }
