--- a/OrdersNotifications/OrdersNotifications.Library/OrdersNotifications.Library.csproj
+++ b/OrdersNotifications/OrdersNotifications.Library/OrdersNotifications.Library.csproj
@@ -5,8 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Azure.Storage.Queue" Version="11.1.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0-preview.1.20120.4" />
     </ItemGroup>
 
 </Project>
