Add QueueTriggered function

--- a/OrdersNotifications/OrdersNotifications.Api/appsettings.json
+++ b/OrdersNotifications/OrdersNotifications.Api/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "AzureStorageConnectionString": "UseDevelopmentStorage=true",
+  "AzureWebJobsStorage": "UseDevelopmentStorage=true",
   "EmailSettings": {
-    "AdminEmail": "guilherme.porto@lambda3.com.br"
+    "AdminEmail": "admin@email.com"
   }
 }
