--- a/OrdersNotifications/OrdersNotifications.Api/OrdersNotifications.Api.csproj
+++ b/OrdersNotifications/OrdersNotifications.Api/OrdersNotifications.Api.csproj
@@ -10,5 +10,9 @@
       <ProjectReference Include="..\OrdersNotifications.Library\OrdersNotifications.Library.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
+    </ItemGroup>
+
 
 </Project>
