--- a/OrdersNotifications/OrdersNotifications.Api/appsettings.json
+++ b/OrdersNotifications/OrdersNotifications.Api/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionString": "Server=localhost,1433;Database=OrdersNotifications;User Id=sa;Password=orders_123;MultipleActiveResultSets=true;",
   "AzureWebJobsStorage": "UseDevelopmentStorage=true",
   "EmailSettings": {
     "AdminEmail": "admin@email.com"
