--- a/azure-pipelines-fn.yml
+++ b/azure-pipelines-fn.yml
@@ -1,22 +1,13 @@
-# .NET Core Function App to Windows on Azure
-# Build a .NET Core function app and deploy it to Azure as a Windows function App.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/en-us/azure/devops/pipelines/languages/dotnet-core
-
 trigger:
 - master
 
 variables:
-  # Azure Resource Manager connection created during pipeline creation
-  azureSubscription: '$(azureSubscription)'
+  azureSubscription: 'Visual Studio Professional (7ed53679-1661-4c8b-b7b9-08b51fd7073f)'
 
-  # Function app name
   functionAppName: 'orders-notifications-fn'
 
-  # Agent VM image name
   vmImageName: 'vs2017-win2016'
 
-  # Working Directory
   workingDirectory: '$(System.DefaultWorkingDirectory)/OrdersNotifications/OrdersNotifications.Functions'
 
 stages:
